# XCSP3-CPP-Parser

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  HOWTO  LICENSE  Makefile  NEWS  README  README.md  build.sh  clean.sh  cmake_install.cmake  xcsp3parser.cbp
.cmake/api/v1/reply/: cache-v2-b19a45e4f224da1244e1.json  cmakeFiles-v1-33b16854ab750e6f153f.json  codemodel-v2-9cb85d259458f0c1b1e8.json  index-2022-10-23T09-08-02-0577.json  target-samplesXcsp3-Debug-3cc473626dbcecbf5784.json  target-xcsp3parser-Debug-bbcb50f09dd1fa1c4aac.json  target-xcsp3parser_dynamic-Debug-b64f08eabab360311858.json
include/: AttributeList.h  UTF8String.h  XCSP3Constants.h  XCSP3Constraint.h  XCSP3CoreCallbacks.h  XCSP3CoreParser.h  XCSP3Domain.h  XCSP3Manager.h  XCSP3Objective.h  XCSP3Tree.h  XCSP3TreeNode.h  XCSP3Variable.h  XCSP3utils.h  XMLParser.h
instances/: example.xml  obj.xml  tsp-25-843.xml
samples/: XCSP3PrintCallbacks.h  XCSP3SummaryCallbacks.h  main.cc  makefile  testCanonization.cc  testTree.cc
src/: UTF8String.cc  XCSP3Code.cc  XCSP3CoreParser.cc  XCSP3Manager.cc  XCSP3Tree.cc  XCSP3TreeNode.cc  XMLParser.cc  XMLParserTags.cc
